// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-1h245c6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hpo279-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-fpor5m-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1i3wexl-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-2n9u3q-Icon"
                />
              </span>
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-bhexrx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-2n9u3q-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1i3wexl-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1shwk9n-Icon"
                />
              </span>
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-bhexrx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1shwk9n-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-13akgc3"
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-19vexqt"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1i3wexl-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-bhexrx-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-71prqf-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1i3wexl-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-bhexrx-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-1p4z2la-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-1e1zkk7-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-yklu5p-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-6ez3qq-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1hsfcrv-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1sl0795-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1v3snu0-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1hsfcrv-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1sl0795-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1v3snu0-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-bhexrx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-8zmr6c-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-7gxkgw-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1lgcoxd-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-alwr26-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-7gxkgw-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1lgcoxd-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1r0s33d-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-7gxkgw-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1lgcoxd-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              className="css-o66dxn-TextInputWrapper"
            >
              <div
                className="css-8zmr6c-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-7gxkgw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1lgcoxd-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-hpo279-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-9lkybz-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-71prqf-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-9lkybz-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-fpor5m-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-9lkybz-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              className="css-o66dxn-TextInputWrapper"
            >
              <div
                className="css-hpo279-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-6ez3qq-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-9lkybz-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
